JastAddExtensions/NonNullChecker/test/Test05.result
Errors:
test/Test05.java:20:
  Semantic Error: non null field n4 is not definitely non null after constructor
